--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "jest-allure-image-snapshot",
   "version": "0.0.2",
-  "main": "index",
+  "main": "dist/index",
   "repository": "https://github.com/zaqqaz/jest-allure-image-snapshot.git",
   "author": "Denis Artyuhovich <i@denis.by>",
   "license": "MIT",
   "dependencies": {
+    "dynamicpixelmatch": "^0.0.2",
     "jest-allure": "^0.1.1",
     "jest-image-snapshot": "^2.4.3"
   },
   "devDependencies": {
-    "@types/jest-image-snapshot": "^2.4.0"
+    "@types/jest-image-snapshot": "^2.4.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
   }
 }
