--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/jest-image-snapshot": "^2.4.0",
+    "strip-ansi": "^4.0.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
   }
